beta version with TagCtrl
mouse over doesn't work quite correct in this beta

--- a/css/index.styl
+++ b/css/index.styl
@@ -13,8 +13,9 @@ p
     text-align: center
     font-size: 16px
 
-
-
+.demo_div
+    margin: 10px auto
+    width: 500px
 
 .story_div
     border: 1px solid #DDD
@@ -23,22 +24,20 @@ p
 
 .story_div .header
     background-color: #F2F2F2
-    padding-bottom: 5px
+    padding: 3px
 
 .story_div .story_id
-    padding: 3px
     float: left
     font-weight: bold
 
 .story_div .title
+    padding-left: 5px
     font-weight: bold
-    padding: 3px
     overflow: hidden
     white-space: nowrap
     text-overflow: ellipsis
 
 .story_div .subtitle
-    padding: 3px
     font-size: 10pt
     color: #999
     float: right
