--- a/app/views/storycard_demo.jade
+++ b/app/views/storycard_demo.jade
@@ -1,9 +1,10 @@
-.story_div
+.demo_div
+  .story_div
     .header
       .story_id 4711
-      .title WHAT is this all about
+      .title WHAT is this all about and has a very long title that will not break, you see
       .subtitle 31.12.2013
-      #tagtextfield.tagtextfield
+      div#tagtextfield.tagtextfield      
     .description
       | Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
     .footer
