element pattern for TagTextFieldCtrl
nice cleanup

--- a/css/tagtextfield.styl
+++ b/css/tagtextfield.styl
@@ -1,6 +1,4 @@
 
-
-
 .tagtextfield
     font-size: 10pt
 
@@ -10,7 +8,7 @@
     box-shadow: 0 0 10px #9ecaed;
 
 .tagtextfield .tag
-    border-radius: 1em
+    border-radius(1em)
     border: none
     font-size: 10pt
     color: #FFF
@@ -25,9 +23,9 @@
     cursor: default
     color: red
     visibility: hidden
-    
+
 .tagtextfield .taginput
-    border-radius: 1em
+    border-radius(1em)
     border: none
     width: 50px
     font-family: Verdana;
