Changed Tag model to just simple list of strings

--- a/app/views/storycard_demo.jade
+++ b/app/views/storycard_demo.jade
@@ -4,7 +4,7 @@
       .story_id 4711
       .title WHAT is this all about and has a very long title that will not break, you see
       .subtitle 31.12.2013
-      div#tagtextfield.tagtextfield      
+      div#tagtextfield.tagtextfield
     .description
       | Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
     .footer
@@ -12,3 +12,27 @@
       div.footer_col.col2 &lt;Status&gt;
       div.footer_col.col3 800 &curren; / 18 &Delta;
       br(style="clear: left;")
+
+hr
+input#taginput
+hr
+
+.demo_div
+  .story_div
+    .header
+      .story_id 4711
+      .title WHAT is this all about and has a very long title that will not break, you see
+      .subtitle 31.12.2013
+      div#tagtextfield2.tagtextfield
+    .description
+      | Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
+    .footer
+      div.footer_col.col1 Online
+      div.footer_col.col2 &lt;Status&gt;
+      div.footer_col.col3 800 &curren; / 18 &Delta;
+      br(style="clear: left;")
+
+hr
+
+input(type="button", value="addOne")#addOne
+
