--- a/css/taginput.styl
+++ b/css/taginput.styl
@@ -1,42 +1,37 @@
 
-.tagtextfield
-    font-size: 10pt
-
 .tagtextfield_glow
     outline: none;
     border-color: #9ecaed;
     box-shadow: 0 0 10px #9ecaed;
 
-.tagtextfield .tag
+.taginput .tag
     border-radius(1em)
     border: none
-    font-size: 10pt
+    line-height: 1.0
     color: #FFF
     vbg-gradient(#CCF, #AAF)
     padding: 0 0 0 0.5em
     margin: 0 0 0 3px
     cursor: default
 
-.tagtextfield i.icon-remove
+.taginput i.icon-remove
     color:#999
     margin-right:3px
     cursor: default
     color: red
     visibility: hidden
 
-.tagtextfield .taginput
+.taginput .newtag
     border-radius(1em)
     border: none
-    width: 50px
-    font-family: Verdana;
-    font-size: 10pt
+    line-height: 1.0
     color: #FFF
-    background: #CCF
-    padding: 0 5px 0px 5px
+    vbg-gradient(#CCF, #AAF)
+    padding: 0 0.5em 0 0.5em
     margin: 0 0 0 3px
+    width: 50px
     vertical-align: baseline
-    &:focus
-        outline-width: 0
+    outline-width: 0
 
 .mouseover
     background: #CCF !important
