--- a/css/taginput.styl
+++ b/css/taginput.styl
@@ -1,8 +1,8 @@
+body
+  font-size: 15pt
 
-.tagtextfield_glow
-    outline: none;
-    border-color: #9ecaed;
-    box-shadow: 0 0 10px #9ecaed;
+.taginput
+    position: relative
 
 .taginput .tag
     border-radius(1em)
@@ -13,6 +13,21 @@
     padding: 0 0 0 0.5em
     margin: 0 0 0 3px
     cursor: default
+    &:hover
+      background: #CCF !important
+    
+.taginput .addtagcircle
+    border: none
+    border-radius(50%)
+    text-align: center
+    color: #FFF
+    vbg-gradient(#CCF, #AAF)
+    padding: 0 0.2em 0 0.2em
+    margin: 0 0 0 3px
+    cursor: default
+    &:hover
+      color: blue
+      background: #CCF !important
 
 .taginput i.icon-remove
     color:#999
@@ -21,7 +36,8 @@
     color: red
     visibility: hidden
 
-.taginput .newtag
+.taginput .newtaginput
+    position: relative
     border-radius(1em)
     border: none
     line-height: 1.0
@@ -29,15 +45,35 @@
     vbg-gradient(#CCF, #AAF)
     padding: 0 0.5em 0 0.5em
     margin: 0 0 0 3px
+
+.taginput input
     width: 50px
-    vertical-align: baseline
+    border: none
+    background: none
+    padding: 0
+    margin: 0
     outline-width: 0
+    //can anyone please tell me why bootstrap suddenly defines a font for input elements???
+    font: inherit
+    color: inherit
+    vertical-align:baseline
+    
+   
 
-.mouseover
-    background: #CCF !important
-
-.tagoracle
+.tagOracle
+    position: absolute
+    top: 1.2em
+    left: 9px
+    border-radius(3px)
     border: 1px solid black
     background: #EEE
     color: #000
+    box-shadow(2px 2px 4px rgba(80, 80, 80, 0.2))
+    
+.tagOracle ul
+    list-style-type: none
+    padding: 0
+    margin: 0
 
+.tagOracle .selectedSuggestion
+    vbg-gradient(#CCF, #AAF)
