nice working with oracle popup

--- a/css/taginput.styl
+++ b/css/taginput.styl
@@ -72,7 +72,7 @@ body
     
 .tagOracle ul
     list-style-type: none
-    padding: 0
+    padding: 2px
     margin: 0
 
 .tagOracle .selectedSuggestion
