--- a/css/taginput.styl
+++ b/css/taginput.styl
@@ -1,6 +1,3 @@
-body
-  font-size: 15pt
-
 .taginput
     position: relative
 
@@ -57,8 +54,6 @@ body
     font: inherit
     color: inherit
     vertical-align:baseline
-    
-   
 
 .tagOracle
     position: absolute
@@ -76,4 +71,5 @@ body
     margin: 0
 
 .tagOracle .selectedSuggestion
+    color: white
     vbg-gradient(#CCF, #AAF)
